--- a/Day8-google-auth-dashboard/src/App.css
+++ b/Day8-google-auth-dashboard/src/App.css
@@ -4,7 +4,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #f4f4f4;
+  background-color: #8d6464;
 }
 
 .login-container, .dashboard {
@@ -37,7 +37,7 @@ button {
 .form-container {
   width: 350px;
   height: 500px;
-  background-color: #fff;
+  background-color: #2a0cd3;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 10px;
   box-sizing: border-box;
