--- a/Day8-google-auth-dashboard/src/Styles/login.Styles.css
+++ b/Day8-google-auth-dashboard/src/Styles/login.Styles.css
@@ -1,7 +1,7 @@
 .form-container {
   width: 350px;
   height: 500px;
-  background-color: #fff;
+  background-color: #a54141;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 10px;
   box-sizing: border-box;
